--- a/Mercurii/Views/Home/Index.cshtml
+++ b/Mercurii/Views/Home/Index.cshtml
@@ -2,30 +2,40 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <div class="home-main-text text-center">
+            <h1 class="text-success">MERCURII</h1>
+            <p>
+                <b>
+                    Useful service to keep touch with dear people for you
+                </b>
+            </p>
+            <p>
+                Maken exactly for you
+            </p>
+            <p>
+                <h3 class="text-success">
+                    Let's get it started!
+                </h3>
+            </p>
+            <p class="text-center">
+                <a href="@Url.Action("Login","Account")" class="btn btn-success">Sign In</a>
+                <a href="@Url.Action("SignUp","Account")" class="btn btn-success">Sign Out</a>
+            </p>
+        </div>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+
     </div>
 </div>
